// Copyright (c) 2019 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.ledger.api.v1;

import "com/digitalasset/ledger/api/v1/ledger_offset.proto";
import "com/digitalasset/ledger/api/v1/transaction_filter.proto";
import "com/digitalasset/ledger/api/v1/transaction.proto";
import "com/digitalasset/ledger/api/v1/trace_context.proto";


option java_outer_classname = "TransactionServiceOuterClass";
option java_package = "com.digitalasset.ledger.api.v1";

// Allows clients to read transactions from the ledger.
service TransactionService {

  // Read the ledger's filtered transaction stream for a set of parties.
  rpc GetTransactions (GetTransactionsRequest) returns (stream GetTransactionsResponse);

  // Read the ledger's complete transaction stream for a set of parties.
  rpc GetTransactionTrees (GetTransactionsRequest) returns (stream GetTransactionTreesResponse);

  // Lookup a transaction by the ID of an event that appears within it.
  // Returns ``NOT_FOUND`` if no such transaction exists.
  rpc GetTransactionByEventId (GetTransactionByEventIdRequest) returns (GetTransactionResponse);

  // Lookup a transaction by its ID.
  // Returns ``NOT_FOUND`` if no such transaction exists.
  rpc GetTransactionById (GetTransactionByIdRequest) returns (GetTransactionResponse);

  // Get the current ledger end.
  // Subscriptions started with the returned offset will serve transactions created after this RPC was called.
  rpc GetLedgerEnd (GetLedgerEndRequest) returns (GetLedgerEndResponse);

}

message GetTransactionsRequest {

  // Must correspond to the ledger ID reported by the Ledger Identification Service.
  // Required
  string ledger_id = 1;

  // Beginning of the requested ledger section.
  // Required
  LedgerOffset begin = 2;

  // End of the requested ledger section.
  // Optional, if not set, the stream will not terminate.
  LedgerOffset end = 3;

  // Requesting parties with template filters.
  // Required
  TransactionFilter filter = 4;

  // If enabled, values served over the API will contain more information than strictly necessary to interpret the data.
  // In particular, setting the verbose flag to true triggers the ledger to include labels for record fields.
  // Optional
  bool verbose = 5;

  // Server side tracing will be registered as a child of the submitted context.
  // This field is a future extension point and is currently not supported.
  // Optional
  TraceContext trace_context = 1000;

}

message GetTransactionsResponse {
  // The list of transactions that matches the filter in GetTransactionsRequest for the GetTransactions method.
  repeated Transaction transactions = 1;
}

message GetTransactionTreesResponse {
  // The list of transaction trees that matches the filter in ``GetTransactionsRequest`` for the ``GetTransactionTrees`` method.
  repeated TransactionTree transactions = 1;
}

message GetTransactionByEventIdRequest {
  // Must correspond to the ledger ID reported by the Ledger Identification Service.
  // Required
  string ledger_id = 1;

  // The ID of a particular event.
  // Required
  string event_id = 2;

  // The parties whose events the client expects to see.
  // Events that are not visible for the parties in this collection will not be present in the response.
  // Required
  repeated string requesting_parties = 3;

  // Server side tracing will be registered as a child of the submitted context.
  // This field is a future extension point and is currently not supported.
  // Optional
  TraceContext trace_context = 1000;
}

message GetTransactionByIdRequest {
  // Must correspond to the ledger ID reported by the Ledger Identification Service.
  // Required
  string ledger_id = 1;

  // The ID of a particular transaction.
  // Required
  string transaction_id = 2;

  // The parties whose events the client expects to see.
  // Events that are not visible for the parties in this collection will not be present in the response.
  // Required
  repeated string requesting_parties = 3;

  // Server side tracing will be registered as a child of the submitted context.
  // This field is a future extension point and is currently not supported.
  // Optional
  TraceContext trace_context = 1000;
}

message GetTransactionResponse {
  TransactionTree transaction = 1;
}

message GetLedgerEndRequest {
  // Must correspond to the ledger ID reported by the Ledger Identification Service.
  // Required
  string ledger_id = 1;

  // Server side tracing will be registered as a child of the submitted context.
  // This field is a future extension point and is currently not supported.
  // Optional
  TraceContext trace_context = 1000;
}

message GetLedgerEndResponse {
  // The absolute offset of the current ledger end.
  LedgerOffset offset = 1;
}

